parse 3 or more arguments